--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <header>
   <ul>
-    <li><img class="logo" src="/static/images/logo.png"></li>
+    <li><img class="logo" src="/images/logo.png"></li>
     <li><a href="/">Browse</a></li>
     <li><a href="/create">Add a Cube</a></li>
     <li><a href="/about">About</a></li>
