--- a/views/details.hbs
+++ b/views/details.hbs
@@ -4,6 +4,9 @@
   <div class="details">
     <p><span>Description:</span> {{description}}</p>
     <p><span>Difficulty level:</span> {{difficulty}}</p>
-    <a class="btn" href="/">Back</a>
+    <div class="btns">
+      <a class="btn" href="/">Back</a>
+      <a class="btn btn-del" href="/delete/{{id}}">Delete</a>
+    </div>
   </div>
 </main>
