--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     {{> header }}
-    {{{body}}}
+    <main>{{{body}}}</main>
   </div>
   {{> footer }}
 </body>
