--- a/views/attachAccessory.hbs
+++ b/views/attachAccessory.hbs
@@ -1,20 +1,21 @@
 
 <h1>Attach a new accessory</h1>
 <div class="form">
-  <h2>Rubiks Cube</h2>
-  <img class="cube" src="https://images-na.ssl-images-amazon.com/images/I/71WS9kb-JFL._SL1300_.jpg">
-  <form action='' method="">
-    <label for="accessory">Accessories</label>
-    <select id="accessory" name="accessory">
-      <option value="Accessory 1">Accessory 1</option>
-      <option value="Accessory 2">Accessory 2</option>
-      <option value="Accessory 3">Accessory 3</option>
-      <option value="Accessory 4">Accessory 4</option>
-      <option value="Accessory 5">Accessory 5</option>
-    </select>
-    <input type="submit" value="Attach">
-  </form>
-  <h3 class="italic">This cube has all available accessories so far or there is no available at all...
-  </h3>
+  <h2>{{name}}</h2>
+  <img class="cube" src="{{imageUrl}}">
+  {{#if canAttachAccessory}}
+    <form action='/attach/accessory/{{_id}}' method="POST">
+      <label for="accessory">Accessories</label>
+      <select id="accessory" name="accessory">
+        {{#each accessories}}
+          <option value="{{this._id}}">{{this.name}}</option>
+        {{/each}}
+      </select>
+      <input type="submit" value="Attach">
+    </form>
+  {{else}}
+    <h3 class="italic">This cube has all available accessories so far or there is no available at all...
+    </h3>
+  {{/if}}
   <a class="btn" href="/">Back</a>
 </div>
