--- a/views/details.hbs
+++ b/views/details.hbs
@@ -1,8 +1,23 @@
+
 <h1>{{name}}</h1>
 <img class="cube" src="{{imageUrl}}">
 <div class="details">
-  <p><span>Description:</span> {{description}}</p>
-  <p><span>Difficulty level:</span> {{difficulty}}</p>
-  <a class="btn" href="/">Back</a>
+    <p><span>Description:</span>{{description}}</p>
+    <p><span>Difficulty level:</span> {{difficulty}}</p>
+    <a class="btn" href="/">Back</a>
+    <a class="btn" href="/attach/accessory/{{_id}}">Attach Accessory</a>
 </div>
+<h2>Accessories</h2>
+<div class="accessories">
+  {{#each accessories}}
+    <div class="accessory">
+        <img src="{{this.imageUrl}}" alt="stickerName">
+        <h3>{{this.name}}</h3>
+        <p>{{this.description}}</p>
+    </div>
 
+  {{else}}
+    <h3 class="italic">This cube has no accessories yet...</h3>
+  {{/each}}
+    
+</div>
