--- a/views/registerPage.hbs
+++ b/views/registerPage.hbs
@@ -1,6 +1,6 @@
 <h1>Register Form</h1>
 <div class="form">
-    <form action='/' method="POST">
+    <form action='/signup' method="POST">
         <label for="username">Username</label>
         <input type="text" id="username" name="username">
 
