--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -10,7 +10,7 @@
     <li><a href="/about">About</a></li>
     
     {{#if isLoggedIn}}
-      <li><a href="/">Logout</a></li>
+      <li><a href="/logout">Logout</a></li>
     {{else}}
       <li><a href="/login">Login</a></li>
       <li><a href="/signup">Register</a></li>
