--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,5 +1,5 @@
-
 <h1>Create</h1>
+{{> error-message }}
 <div class="form">
   <form action='/create' method="POST">
     <label for="name">Name</label>
