--- a/views/loginPage.hbs
+++ b/views/loginPage.hbs
@@ -1,4 +1,5 @@
 <h1>Login Form</h1>
+{{> error-message }}
 <div class="form">
     <form action='/login' method="POST">
         <label for="username">Username</label>
