--- a/views/createAccessory.hbs
+++ b/views/createAccessory.hbs
@@ -1,4 +1,5 @@
 <h1>Create Accessory</h1>
+{{> error-message }}
 <div class="form">
     <form action='/create/accessory' method="POST">
         <label for="name">Name</label>
