--- a/views/registerPage.hbs
+++ b/views/registerPage.hbs
@@ -1,4 +1,5 @@
 <h1>Register Form</h1>
+{{> error-message }}
 <div class="form">
     <form action='/signup' method="POST">
         <label for="username">Username</label>
